fix word-wrap property

--- a/src/scss/layout/_common.scss
+++ b/src/scss/layout/_common.scss
@@ -423,6 +423,7 @@
   box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
   padding: 15px;
+  white-space: pre-wrap;
 
   @include media(">=tablet") {
     padding: 15px;
@@ -436,8 +437,11 @@
   h4 {
     font-size: 1.5rem;
     margin-bottom: 10px;
+    overflow: hidden;
+    height: 20px;
 
     @include media(">=desktop") {
+      height: 26px;
       font-size: 2rem;
     }
 
@@ -455,7 +459,6 @@
     position: relative;
     padding-right: 30px;
     line-height: 1.2;
-    word-break: break-all;
   }
 
   &-content {
@@ -809,13 +812,15 @@
     font-size: 1.4rem;
     line-height: 1;
     font-weight: 300;
+    white-space: pre-wrap;
   }
 
   h4 {
     font-size: 1.6rem;
     line-height: 1.2;
     margin-bottom: 5px;
-    white-space: nowrap;
+    white-space: pre-wrap;
+    height: 22px;
     overflow: hidden;
     text-overflow: ellipsis;
     width: 100%;
